# dart_v2ray

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/dart/v2ray/vpn/: DartV2rayPlugin.kt
android/src/main/kotlin/com/dart/v2ray/vpn/service/: V2RayVpnService.kt
android/src/main/kotlin/com/dart/v2ray/vpn/xray/core/: XrayCoreManager.kt
android/src/main/kotlin/com/dart/v2ray/vpn/xray/dto/: XrayConfig.kt
android/src/main/kotlin/com/dart/v2ray/vpn/xray/service/: XrayVPNService.kt
android/src/main/kotlin/com/dart/v2ray/vpn/xray/utils/: AppConfigs.kt  Utilities.kt
android/src/test/kotlin/com/dart/v2ray/vpn/: DartV2rayPluginTest.kt
docs/: README.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/dart/v2ray/vpn_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dart_v2ray.podspec
ios/Classes/: DartV2rayPlugin.swift
ios/Classes/Helpers/: AutoDisconnectHelper.swift
ios/Classes/Managers/: AutoDisconnectNotificationManager.swift  PacketTunnelManager.swift
lib/: dart_v2ray.dart  dart_v2ray_method_channel.dart  dart_v2ray_platform_interface.dart
lib/src/core/: config_validator.dart  dart_v2ray_client.dart
lib/src/core/status/: persistent_status_controller.dart  windows_status_fallback_mapper.dart
lib/src/core/windows/: windows_bug_report_builder.dart
lib/src/models/: auto_disconnect_config.dart  connection_status.dart  vpn_status.dart
lib/src/platform/: dart_v2ray_platform.dart  method_channel_dart_v2ray.dart  status_event_parser.dart
lib/src/share_links/: shadowsocks_url.dart  share_links.dart  socks_url.dart  trojan_url.dart  v2ray_url.dart  vless_url.dart  vmess_url.dart
lib/url/: shadowsocks.dart  socks.dart  trojan.dart  url.dart  vless.dart  vmess.dart
linux/: CMakeLists.txt  dart_v2ray_plugin.cc
linux/include/dart_v2ray/: dart_v2ray_plugin.h
macos/: dart_v2ray.podspec
macos/Classes/: AutoDisconnectHelper.swift  AutoDisconnectNotificationManager.swift  DartV2rayPlugin.h  DartV2rayPlugin.mm  DartV2rayPlugin.swift  DesktopV2rayCoreBridge.cc  PacketTunnelManager.swift
macos/ExtensionTemplate/: PacketTunnelProvider.swift  XrayBridge.swift
macos/LibXray.xcframework/tvos-arm64/Headers/: libXray.h
macos/XRay.xcframework/: Info.plist
macos/runtime_helper/: DartV2RayRuntimeHelper.swift
macos/xray_bridge_go/: .tool-versions  bridge.go  go.mod
macos/xray_bridge_go/include/: libxraybridge.h
macos/xray_bridge_go/scripts/: build_macos_bridge.sh
shared/: desktop_v2ray_core.cc  desktop_v2ray_core.h
test/: dart_v2ray_method_channel_test.dart  dart_v2ray_test.dart
windows/: CMakeLists.txt  dart_v2ray_plugin.cpp  dart_v2ray_plugin.h  dart_v2ray_plugin_c_api.cpp
windows/include/dart_v2ray/: dart_v2ray_plugin_c_api.h
